--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ release/
 .gradle/
 build/
 
+.idea/
 # Local configuration file (sdk path, etc)
 local.properties
 
@@ -83,3 +84,5 @@ lint/outputs/
 lint/tmp/
 # lint/reports/
 
+libs/
+/.idea/
