--- a/aidl/src/main/AndroidManifest.xml
+++ b/aidl/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.aiden.aidl">
+
+    <permission
+        android:name="com.aiden.aidl.permission.Aidl"
+        android:protectionLevel="normal" />
+    <uses-permission android:name="com.aiden.aidl.permission.Aidl" />
 
     <application
         android:allowBackup="true"
@@ -8,7 +14,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".SecondActivity"></activity>
         <activity android:name=".ClientActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".server.ServerService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":server" />
     </application>
 
 </manifest>
